--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -32,8 +32,8 @@ collections:
         - { name: url, label: URL, widget: string } 
         - { name: imageUrl, label: ImageURL, widget: string }
 - name: Docss
-  label: "doc"
-  folder: doc
+  label: "Tutorial"
+  folder: docs
   identifier_field: title
   extension: md
   widget: "list"
@@ -42,10 +42,6 @@ collections:
   fields:
     - { name: title, label: Title, widget: string }
     - { name: body, label: Body, widget: markdown }
-    - { name: slug, label: Slug, widget: string }
-    - label: "Tags"
-      name: "tags"
-      widget: "list"
     - label: "Authors"
       name: "authors" 
       widget: "list"
